Changelog
=========

0.1.4 (unreleased)
------------------

- Fix 'decoding Unicode is not supported' error on update proprio refs #6291
  [schminitz]


0.1.3 (2015-10-29)
------------------

- Avoid error with 'None' in date naiss refs #6289
  [schminitz]

- Increase year range for date naiss refs #6289
  [schminitz]


0.1.2 (2015-10-28)
------------------

- Add possibility to choose date of birth for proprio refs #6289
  [schminitz]


0.1.1 (2014-12-02)
------------------

- Get only active proprio affinitic refs #6087


0.1 (2014-09-15)
----------------

- Initial release